lista 02 revisada