@@ -1,20 +1,22 @@
-import br.com.studies.Java01Exercises;
-import br.com.studies.infnet.*;
+package com.main;
+
+import com.studies.*;
 
 import java.math.BigDecimal;
 import java.nio.file.Paths;
-
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import static java.lang.System.*;
+import static java.lang.System.out;
 
 public class Main {
+
+    private static final String VALOR_MENSALIDADE = "99.98";
+
     public static void main(String[] args) {
-        out.println(new Java01Exercises("abc").getTextA().getTextB().text);
 
         out.println("\n--- Exercício 01 ---");
         Produto cadeiraGamer = new Produto("Cadeira Gamer", Paths.get("cadeiras/gamer"), new BigDecimal("1000.00"));
@@ -69,7 +71,10 @@ public class Main {
         out.printf("Usando Optional: %s%n", pagamentoAndre.somaPrecosProdutosPagtoUsandoOptional());
 
         out.println("\n--- Exercício 04 ---");
-        BigDecimal todosPagtosSomados = pagamentos.stream().map(Pagamento::somaPrecosProdutosPagtoUsandoBigDecimal).reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal todosPagtosSomados = pagamentos
+            .stream()
+            .map(Pagamento::somaPrecosProdutosPagtoUsandoBigDecimal)
+            .reduce(BigDecimal.ZERO, BigDecimal::add);
         out.printf("Somando todos os pagtos: %s%n", todosPagtosSomados);
 
         out.println("\n--- Exercício 05 ---");
@@ -78,7 +83,12 @@ public class Main {
         out.printf("Contando produtos vendidos para o Cliente Andre : %s%n", pagamentoAndre.getProdutos().size());
         out.printf("Contando produtos vendidos para o Cliente Camila : %s%n", pagamentoCamila.getProdutos().size());
 
-        OptionalInt contadorProdutosTotaisVendidos = pagamentos.stream().mapToInt(pagamento -> pagamento.getProdutos().size()).reduce(Integer::sum);
+        OptionalInt contadorProdutosTotaisVendidos = pagamentos
+            .stream()
+            .mapToInt(
+                pagamento -> pagamento.getProdutos().size()
+            )
+            .reduce(Integer::sum);
         out.printf("Contando total de produtos vendidos: %s%n", contadorProdutosTotaisVendidos.getAsInt());
 
         out.println("\n--- Exercício 06 ---");
@@ -86,8 +96,16 @@ public class Main {
         c1.setNome("Douglas Lima");
         Cliente c2 = new Cliente();
         c2.setNome("Lucas Santos");
-        Produto prodCadeiraGamer = new Produto("Cadeira Gamer", Paths.get("cadeiras/gamer"), new BigDecimal("1000.00"));
-        Produto pacoteDeImagens = new Produto("Pacote de Imagens - NFT", Paths.get("nfts/pacote_imagens"), new BigDecimal("6000.00"));
+        Produto prodCadeiraGamer = new Produto(
+            "Cadeira Gamer",
+            Paths.get("cadeiras/gamer"),
+            new BigDecimal("1000.00")
+        );
+        Produto pacoteDeImagens = new Produto(
+            "Pacote de Imagens - NFT",
+            Paths.get("nfts/pacote_imagens"),
+            new BigDecimal("6000.00")
+        );
         HashMap<String, List<Produto>> clienteProdutos = new HashMap<>();
         clienteProdutos.put(c1.getNome(), List.of(prodCadeiraGamer, pacoteDeImagens));
         clienteProdutos.put(c2.getNome(), List.of(prodCadeiraGamer));
@@ -106,33 +124,37 @@ public class Main {
 
         out.println("\n--- Exercício 07 ---");
         out.println("Sem ordenação - apenas impressão do map com as chaves e valores:");
-        pagamentos.forEach(pagamento ->
-            {
-                HashMap<String, BigDecimal> mapClienteProdutos = new HashMap<>();
-                BigDecimal somaProdutosComprados = pagamento.getProdutos().stream().map(Produto::getPreco).reduce(BigDecimal.ZERO, BigDecimal::add);
-                mapClienteProdutos.put(pagamento.getCliente().getNome(), somaProdutosComprados);
-                mapClienteProdutos
-                    .entrySet()
-                    .stream()
-                    .map(
-                        e -> String.format(
-                            "Nome do Cliente: %s | Item(ns): %s",
-                            e.getKey(),
-                            e.getValue()
-                        )
+        pagamentos.forEach(pagamento -> {
+            HashMap<String, BigDecimal> mapClienteProdutos = new HashMap<>();
+            BigDecimal somaProdutosComprados = pagamento
+                .getProdutos()
+                .stream()
+                .map(Produto::getPreco)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+            mapClienteProdutos.put(pagamento.getCliente().getNome(), somaProdutosComprados);
+            mapClienteProdutos
+                .entrySet()
+                .stream()
+                .map(
+                    e -> String.format(
+                        "Nome do Cliente: %s | Item(ns): %s",
+                        e.getKey(),
+                        e.getValue()
                     )
-                    .forEach(out::println);
-                //
-            }
-        );
+                )
+                .forEach(out::println);
+            //
+        });
 
         Map<String, BigDecimal> mapClienteProdutosSemOrdem = new HashMap<>();
-        pagamentos.forEach((Pagamento pagamento) ->
-            {
-                BigDecimal somaProdutosComprados = pagamento.getProdutos().stream().map(Produto::getPreco).reduce(BigDecimal.ZERO, BigDecimal::add);
-                mapClienteProdutosSemOrdem.put(pagamento.getCliente().getNome(), somaProdutosComprados);
-            }
-        );
+        pagamentos.forEach((Pagamento pagamento) -> {
+            BigDecimal somaProdutosComprados = pagamento
+                .getProdutos()
+                .stream()
+                .map(Produto::getPreco)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+            mapClienteProdutosSemOrdem.put(pagamento.getCliente().getNome(), somaProdutosComprados);
+        });
 
         LinkedHashMap<String, BigDecimal> mapClienteProdutosOrdenado = mapClienteProdutosSemOrdem
             .entrySet()
@@ -149,62 +171,97 @@ public class Main {
         out.printf("Ordenando pelo maior valor gasto em compras: %s%n", mapClienteProdutosOrdenado);
 
         out.println("Apresentando o cliente que gastou o maior valor em compras:");
-        Map.Entry<String, BigDecimal> clienteQueGastouMais = mapClienteProdutosOrdenado.entrySet().stream().findFirst().get();
-        out.printf(
-            "Nome do Cliente: %s | Valor em Compra(s): %s%n",
-            clienteQueGastouMais.getKey(),
-            clienteQueGastouMais.getValue()
-        );
+        Optional<Map.Entry<String, BigDecimal>> clienteQueGastouMais = mapClienteProdutosOrdenado
+            .entrySet()
+            .stream()
+            .findFirst();
+        if (clienteQueGastouMais.isPresent())
+            out.printf(
+                "Nome do Cliente: %s | Valor em Compra(s): %s%n",
+                clienteQueGastouMais.get().getKey(),
+                clienteQueGastouMais.get().getValue()
+            );
+        //
 
-        Map<Cliente, List<List<Produto>>> clienteParaProdutos = pagamentos.stream().collect(Collectors.groupingBy(
-           Pagamento::getCliente, Collectors.mapping(Pagamento::getProdutos, Collectors.toList())));
+        Map<Cliente, List<List<Produto>>> clienteParaProdutos = pagamentos
+            .stream()
+            .collect(
+                Collectors.groupingBy(
+                    Pagamento::getCliente,
+                    Collectors.mapping(
+                        Pagamento::getProdutos,
+                        Collectors.toList()
+                    )
+                )
+            );
+        //
         out.println(clienteParaProdutos);
 
-        Map<Cliente, List<Produto>> flatMapClienteParaProdutos = clienteParaProdutos.entrySet().stream().collect(Collectors.toMap(
-           Map.Entry::getKey, e -> e.getValue().stream().flatMap(List::stream).collect(Collectors.toList())));
+        Map<Cliente, List<Produto>> flatMapClienteParaProdutos = clienteParaProdutos
+            .entrySet()
+            .stream()
+            .collect(
+                Collectors.toMap(Map.Entry::getKey, e -> e.getValue()
+                    .stream()
+                    .flatMap(List::stream)
+                    .toList()
+                )
+            );
+        //
         out.println(flatMapClienteParaProdutos);
 
         Function<Pagamento, BigDecimal> reducingFunction = p -> p.getProdutos()
-           .stream()
-           .map(Produto::getPreco)
-           .reduce(BigDecimal.ZERO, BigDecimal::add);
+            .stream()
+            .map(Produto::getPreco)
+            .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         Map<Cliente, BigDecimal> topClientes = pagamentos
-           .stream()
-           .collect(
-               Collectors.groupingBy(
-                   Pagamento::getCliente,
-                   Collectors.reducing(
-                       BigDecimal.ZERO,
-                       reducingFunction,
-                       BigDecimal::add
-                   )
-               )
-           );
+            .stream()
+            .collect(
+                Collectors.groupingBy(
+                        Pagamento::getCliente,
+                        Collectors.reducing(
+                            BigDecimal.ZERO,
+                            reducingFunction,
+                            BigDecimal::add
+                        )
+                    )
+                );
+            //
         //
 
         topClientes.entrySet().stream().sorted(Map.Entry.comparingByValue()).forEach(out::println);
 
-        List<Map.Entry<Cliente, BigDecimal>> ordenaClientePorGasto = topClientes.entrySet().stream().sorted(
-           Map.Entry.comparingByValue(
-               Comparator.reverseOrder()
-           )
-        ).toList();
-        out.printf("Cliente com o maior gasto: %s%n", ordenaClientePorGasto.stream().findFirst().get());
+        List<Map.Entry<Cliente, BigDecimal>> ordenaClientePorGasto = topClientes
+            .entrySet()
+            .stream()
+            .sorted(
+                Map.Entry.comparingByValue(
+                    Comparator.reverseOrder()
+                )
+            )
+            .toList();
+        //
+        out.printf("Cliente com o maior gasto: %s%n", ordenaClientePorGasto.stream().findFirst().isPresent());
 
         out.println("\n--- Exercício 08 ---");
         BigDecimal somaPagtosPorPeriodoEspecifico = pagamentos
-           .stream()
-           .filter(pagto -> pagto.getDataCompra().equals(mesPassado))
-           .map(Pagamento::somaPrecosProdutosPagtoUsandoBigDecimal)
-           .reduce(BigDecimal.ZERO, BigDecimal::add);
+            .stream()
+            .filter(pagto -> pagto.getDataCompra().equals(mesPassado))
+            .map(Pagamento::somaPrecosProdutosPagtoUsandoBigDecimal)
+            .reduce(BigDecimal.ZERO, BigDecimal::add);
+        //
         out.printf("Clientes com pagamento do mês passado: %s%n", somaPagtosPorPeriodoEspecifico);
 
         out.println("\n--- Exercício 09 ---");
-        Assinatura assinaturaAndre = new Assinatura(new BigDecimal("99.98"), new Periodo(ontem, hoje), Plano.TRIMESTRAL, andre, true);
-        Assinatura assinaturaCamila = new Assinatura(new BigDecimal("99.98"), new Periodo(anoRetrasado, anoPassado), Plano.SEMESTRAL , camila, false);
-        Assinatura assinaturaJonas = new Assinatura(new BigDecimal("99.98"), new Periodo(anoRetrasado), Plano.ANUAL, jonas, false);
-        Assinatura assinaturaMaria = new Assinatura(new BigDecimal("99.98"), new Periodo(hoje, anoQueVem), Plano.SEMESTRAL, maria, false);
+        Assinatura assinaturaAndre = new Assinatura(new BigDecimal(VALOR_MENSALIDADE), new Periodo(ontem, hoje),
+            Plano.TRIMESTRAL, andre, true);
+        Assinatura assinaturaCamila = new Assinatura(new BigDecimal(VALOR_MENSALIDADE),
+            new Periodo(anoRetrasado, anoPassado), Plano.SEMESTRAL, camila, false);
+        Assinatura assinaturaJonas = new Assinatura(new BigDecimal(VALOR_MENSALIDADE), new Periodo(anoRetrasado),
+            Plano.ANUAL, jonas, false);
+        Assinatura assinaturaMaria = new Assinatura(new BigDecimal(VALOR_MENSALIDADE), new Periodo(hoje, anoQueVem),
+            Plano.SEMESTRAL, maria, false);
 
         List<Assinatura> assinaturas = List.of(assinaturaAndre, assinaturaCamila, assinaturaJonas, assinaturaMaria);
         assinaturas.forEach(out::println);
@@ -218,10 +275,12 @@ public class Main {
         out.println(assinaturaCamila.getPeriodo().getEnd().orElse(hoje));
 
         out.println("\n--- Exercício 10 ---");
-        long periodoAssinaturaAndre = ChronoUnit.MONTHS.between(assinaturaAndre.getPeriodo().getBegin(), assinaturaAndre.getPeriodo().getEnd().orElse(hoje));
+        long periodoAssinaturaAndre = ChronoUnit.MONTHS.between(assinaturaAndre.getPeriodo().getBegin(),
+            assinaturaAndre.getPeriodo().getEnd().orElse(hoje));
         out.printf("O período de assinatura da André é de %s meses %n", periodoAssinaturaAndre);
 
-        long periodoAssinaturaMaria = ChronoUnit.MONTHS.between(assinaturaMaria.getPeriodo().getBegin(), assinaturaMaria.getPeriodo().getEnd().orElseGet(() -> hoje));
+        long periodoAssinaturaMaria = ChronoUnit.MONTHS.between(assinaturaMaria.getPeriodo().getBegin(),
+            assinaturaMaria.getPeriodo().getEnd().orElseGet(() -> hoje));
         out.printf("O período de assinatura da Camila é de %s meses %n", periodoAssinaturaMaria);
 
         out.println("\n--- Exercício 11 ---");
@@ -230,16 +289,14 @@ public class Main {
             .map(Assinatura::getPeriodo)
             .mapToLong(
                 p -> ChronoUnit.MONTHS.between(
-                    p.getBegin(),
-                    p.getEnd().orElse(hoje)
+                        p.getBegin(),
+                        p.getEnd().orElse(hoje)
+                    )
                 )
-            )
-            .forEach(contagemPeriodo -> {
-                out.printf(
-                    "Contando o tempo de assinatura: %s%n",
-                    contagemPeriodo
-                );
-            });
+            .forEach(contagemPeriodo -> out.printf(
+                "Contando o tempo de assinatura: %s%n",
+                contagemPeriodo)
+            );
         //
 
         assinaturas
@@ -261,7 +318,8 @@ public class Main {
                     e.getKey(),
                     e.getValue()
                 )
-            ).forEach(out::println);
+            )
+            .forEach(out::println);
         //
 
         out.println("\n--- Exercício 12 ---");
@@ -283,11 +341,10 @@ public class Main {
                     e.getKey(),
                     e.getValue()
                 )
-            ).forEach(out::println);
+            )
+            .forEach(out::println);
         //
         out.println();
-        assinaturas.forEach(assinatura -> {
-            out.print(assinatura.getCliente().bloqueiaCompra(assinatura, pagamentos));
-        });
+        assinaturas.forEach(assinatura -> out.print(assinatura.getCliente().bloqueiaCompra(assinatura, pagamentos)));
     }
 }
